sand-macros/tests/cases/fail_event_generic_not_advancement.stderr
error[E0277]: `NotAnAdvancementEvent` is used as `Event<NotAnAdvancementEvent>` but does not implement `AdvancementEvent`
 --> tests/cases/fail_event_generic_not_advancement.rs:7:25
  |
7 | pub fn bad(event: Event<NotAnAdvancementEvent>) {
  |                         ^^^^^^^^^^^^^^^^^^^^^ `Event<T>` requires `T: AdvancementEvent`
  |
help: the trait `AdvancementEvent` is not implemented for `NotAnAdvancementEvent`
 --> tests/cases/fail_event_generic_not_advancement.rs:4:1
  |
4 | pub struct NotAnAdvancementEvent;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: AdvancementEvent is a stateless marker for a single vanilla advancement trigger; for custom tick-polled or lifecycle-owned dispatch, implement `SandEvent` (sand_core::events::SandEvent) instead
  = help: the following other types implement trait `AdvancementEvent`:
            AnimalTamed
            AnimalsBreed
            AnyBlockPlaced
            AnyItemConsumed
            AnyItemCrafted
            AnyItemEnchanted
            BeeNestDestroyedEvent
            BrewPotionEvent
          and $N others

error[E0277]: `NotAnAdvancementEvent` is used as `Event<NotAnAdvancementEvent>` but does not implement `AdvancementEvent`
 --> tests/cases/fail_event_generic_not_advancement.rs:6:1
  |
6 | #[event]
  | ^^^^^^^^ `Event<T>` requires `T: AdvancementEvent`
  |
help: the trait `AdvancementEvent` is not implemented for `NotAnAdvancementEvent`
 --> tests/cases/fail_event_generic_not_advancement.rs:4:1
  |
4 | pub struct NotAnAdvancementEvent;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: AdvancementEvent is a stateless marker for a single vanilla advancement trigger; for custom tick-polled or lifecycle-owned dispatch, implement `SandEvent` (sand_core::events::SandEvent) instead
  = help: the following other types implement trait `AdvancementEvent`:
            AnimalTamed
            AnimalsBreed
            AnyBlockPlaced
            AnyItemConsumed
            AnyItemCrafted
            AnyItemEnchanted
            BeeNestDestroyedEvent
            BrewPotionEvent
          and $N others
  = note: this error originates in the attribute macro `event` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `sand_core::prelude`
 --> tests/cases/fail_event_generic_not_advancement.rs:1:5
  |
1 | use sand_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
