sand-macros/tests/cases/fail_event_generic_not_advancement.rs
use sand_core::prelude::*;
use sand_macros::event;

pub struct NotAnAdvancementEvent;

#[event]
pub fn bad(event: Event<NotAnAdvancementEvent>) {
    let _ = event.player();
}

fn main() {}
